# concert_agent

./: .gitignore  README.md  concert_report.html  concert_report_verified.html  generate_report.py  main.py  notes.md  pyproject.toml  research_artists.py  test_pages.py  test_pages_output.txt  test_setup.py  tidal_client.py  upcoming_concerts.json  venues.json  verification_log.json  verified_concerts.json  verify_concerts.py
.claude/: settings.local.json
